Fix bug where add habit button is visible above dialog background screen even when other dialogs are open

--- a/web-client/src/Styles/global.scss
+++ b/web-client/src/Styles/global.scss
@@ -187,7 +187,9 @@ body {
 
         .add-habit-form {
           background-color: inherit;
-          z-index: 3;
+          &.form-is-open {
+            z-index: 3;
+          }
           .add-habit-form-button {
             background-color: black;
             box-shadow: 0 0 1px $gallery;
